--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div style="color:#ddd; position:absolute; text-align:center; font-family:MapoFlowerIsland; margin-top:15%; font-size:14pt;">내가 가는 길이 험하고 멀지라도<br>그대 내게 행복을 주는 사람</div>
             <div style="color:#ddd; position:absolute; text-align:center; font-family:MapoFlowerIsland; margin-top:130%; font-size:14pt">박하명 & 김래영</div>
             <div style="position:absolute; background:linear-gradient( to top, rgba(0,0,0,1), rgba(0,0,0,0) ); margin-top:135%; height:10%"></div>
-            <img src="resources/after_main_photo.jpg" style="padding-left:0px; padding-right:0px;"/>
+            <img src="resources/IMG_9846수.jpg" style="padding-left:0px; padding-right:0px;"/>
         </div>
         <div class="row" style="margin-top:200px;">
             <div style="position:relative; box-shadow: 0px 0px 100px 150px #fff; background-color:white; border-radius:100%; width:80%; margin: 0 auto; aspect-ratio:2.3; padding-left:0; padding-right:0;">
